# myprompt

./: Gemfile  devbox.json  package-lock.json  package.json  process-compose.yml  pyproject.toml  turbo.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/controllers/api/v1/: prompts_controller.rb
app/models/: prompt.rb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb  schedule.rb
config/environments/: production.rb
config/initializers/: cors.rb
db/: schema.rb
db/migrate/: 20231129211735_create_prompts.rb
sync/: filesystem_pipeline.py
sync/.dlt/: .sources
test/controllers/api/v1/: propmpts_controller_test.rb
test/fixtures/: prompts.yml
